--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -33,7 +33,7 @@
         <hr class="buttonSpliter" />
         <div class="clearBoth relative mainButtonContainer">
             <button class="left btnCompact btn-success" data-ng-click="fnFeedback();">Feedback</button>
-            <button class="right btnCompact btn-success" data-ng-click="fnOpenCustomerRequest();">Add Request</button>
+            <button class="right btnCompact btn-success" data-ng-click="fnOpenDispatcherAddRequest();">Add Request</button>
         </div>
         <p class="clear" />
     </div>
