--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -33,7 +33,20 @@
         <hr class="buttonSpliter" />
         <div class="clearBoth relative mainButtonContainer">
             <button class="left btnCompact btn-success" data-ng-click="fnFeedback();">Feedback</button>
-            <button class="right btnCompact btn-success" data-ng-click="fnOpenDispatcherAddRequest();">Add Request</button>
+            <div class="btn-group">
+                <button type="button" class="btnCompact dropdown-toggle" data-toggle="dropdown">
+                Add Request <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="javascript:void(0);" data-ng-click="fnChangeVehiclePhone()">Change Primary No.</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleChangeLocation()">Change Location.</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicleStatus()">Vehcile Status Change</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="">Road Side Booking</a></li>
+                    <li class="divider"></li>
+                    <li><a href="javascript:void(0);" data-ng-click="">Vehicle Breakdown</a></li>
+                </ul>
+            </div>
+            <!-- <button class="right btnCompact btn-success" data-ng-click="fnOpenDispatcherAddRequest();"></button> -->
         </div>
         <p class="clear" />
     </div>
